test/compiler/invalid_programs/classes/infinite_size_nested.jm
#!TypeError

class Infinite1
  child:Infinite2
end

class Infinite2
  child:Infinite1
end
